--- a/react-complete-guide/src/Components/Cockpit/Cockpit.css
+++ b/react-complete-guide/src/Components/Cockpit/Cockpit.css
@@ -7,22 +7,22 @@
   .bold{
     font-weight: bold;
   }
-  .Cockpit button {
+  .Button {
     border : 1px solid blue;
     padding : 16px;
     background-color: green;
     font : inherit;
     color: white;
   }
-  .Cockpit button:hover{
+  .Button:hover{
     background-color:lightgreen;  
     color: black;
   }
-  .Cockpit button.Red{
+  .Button.Red{
     background-color :red;
     color: white  
   }
-  .Cockpit button.Red:hover{
+  .Button.Red:hover{
     background-color :salmon;
     color: black;  
   }
